--- a/package.json
+++ b/package.json
@@ -1,28 +1,56 @@
 {
-  "name": "@clever/letterjam",
-  "version": "0.0.1",
-  "description": "LetterJam",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "name": "phaser-project-template",
+  "version": "3.24.1",
+  "description": "Phaser 3 starter template with TypeScript and webpack.",
+  "homepage": "https://github.com/yandeu/phaser-project-template#readme",
+  "main": "index.js",
   "scripts": {
-    "build": "tsc --dist"
+    "start": "webpack-dev-server --config webpack/webpack.dev.js",
+    "build": "webpack --config webpack/webpack.prod.js",
+    "bundle": "npm run build",
+    "serve": "serve dist"
   },
-  "author": "",
-  "license": "Apache-2.0",
+  "keywords": [
+    "Phaser",
+    "Phaser 3",
+    "Phaser3",
+    "html5 game",
+    "TypeScript",
+    "webpack",
+    "starter"
+  ],
+  "author": {
+    "name": "Yannick Deubel",
+    "url": "https://github.com/yandeu"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yandeu/phaser-project-template.git"
+  },
+  "template": {
+    "name": "phaser-project-template",
+    "url": "https://github.com/yandeu/phaser-project-template",
+    "author": "Yannick Deubel (https://github.com/yandeu)"
+  },
+  "engines": {
+    "node": ">=8.0.0"
+  },
+  "license": "MIT",
   "devDependencies": {
-    "@types/node": "^12.12.24",
-    "babel-eslint": "^7.1.1",
-    "eslint": "3.14.1",
-    "eslint-config-airbnb": "^5.0.1",
-    "eslint-plugin-react": "^3.16.1",
-    "prettier": "1.18.2",
-    "typescript": "^2.1.5",
-    "webpack-cli": "^3.3.12"
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.1.1",
+    "html-webpack-plugin": "^3.2.0",
+    "serve": "^11.3.2",
+    "ts-loader": "^5.4.5",
+    "typescript": "^3.9.6",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^4.2.2",
+    "webpack-obfuscator": "^0.27.4",
+    "workbox-webpack-plugin": "^5.1.3"
   },
   "dependencies": {
-    "@types/express": "^4.17.7",
-    "express": "^4.17.1",
-    "nodemon": "^2.0.4",
-    "ts-node": "^8.10.2"
+    "phaser": "^3.24.1"
   }
 }
