--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,13 @@
 {
   "compilerOptions": {
+    "target": "es5",
     "module": "commonjs",
-    "target": "es6",
-    "lib": ["es2017"],
-    "typeRoots": [
-      "node_modules/@types", "./types"
-    ],
-    "outDir": "./dist",
-  },
-  "exclude": [
-    "node_modules"
-  ]
+    "strict": true,
+    "noImplicitAny": false,
+    "esModuleInterop": true,
+    "allowUnreachableCode": false,
+    "sourceMap": true,
+    "strictPropertyInitialization": false,
+    "lib": ["dom", "es5", "esnext"]
+  }
 }
