--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
     "html-webpack-plugin": "^3.2.0",
-    "serve": "^11.3.2",
     "ts-loader": "^5.4.5",
     "typescript": "^3.9.6",
     "webpack": "^4.43.0",
@@ -51,6 +50,7 @@
     "workbox-webpack-plugin": "^5.1.3"
   },
   "dependencies": {
-    "phaser": "^3.24.1"
+    "phaser": "^3.24.1",
+    "serve": "^11.3.2"
   }
 }
