--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "webpack-dev-server --config webpack/webpack.dev.js",
     "build": "webpack --config webpack/webpack.prod.js",
     "bundle": "npm run build",
-    "serve": "serve dist"
+    "serve": "serve dist",
+    "startProd": "NODE_ENV=production node src/server/server.ts"
   },
   "keywords": [
     "Phaser",
@@ -40,6 +41,8 @@
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
     "html-webpack-plugin": "^3.2.0",
+    "nodemon": "^2.0.4",
+    "npm-run-all": "^4.1.5",
     "ts-loader": "^5.4.5",
     "typescript": "^3.9.6",
     "webpack": "^4.43.0",
@@ -50,6 +53,10 @@
     "workbox-webpack-plugin": "^5.1.3"
   },
   "dependencies": {
+    "@geckos.io/client": "^1.6.1",
+    "@geckos.io/phaser-on-nodejs": "^1.2.3",
+    "@geckos.io/server": "^1.6.1",
+    "express": "^4.17.1",
     "phaser": "^3.24.1",
     "serve": "^11.3.2"
   }
