--- a/package.json
+++ b/package.json
@@ -62,12 +62,12 @@
     "workbox-webpack-plugin": "^5.1.3"
   },
   "dependencies": {
-    "@geckos.io/client": "^1.6.1",
-    "@geckos.io/phaser-on-nodejs": "^1.2.3",
-    "@geckos.io/server": "^1.6.1",
+    "@types/socket.io": "^2.1.10",
     "express": "^4.17.1",
     "phaser": "^3.24.1",
-    "serve": "^11.3.2"
+    "serve": "^11.3.2",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0"
   },
   "husky": {
     "hooks": {
