--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "webpack --config webpack/webpack.prod.js",
     "bundle": "npm run build",
-    "startDev": "webpack --config webpack/webpack.dev.js --watch & NODE_ENV=development node src/server/server.ts",
+    "startDev": "webpack --config webpack/webpack.dev.js --watch & NODE_ENV=development node src/server/server.ts & node_modules/open-cli/cli.js http://localhost:3000",
     "startProd": "NODE_ENV=production node src/server/server.ts",
     "lint": "eslint . --ext .ts"
   },
@@ -50,6 +50,7 @@
     "lint-staged": "^10.2.11",
     "nodemon": "^2.0.4",
     "npm-run-all": "^4.1.5",
+    "open-cli": "^6.0.1",
     "prettier": "2.0.5",
     "ts-loader": "^5.4.5",
     "typescript": "^3.9.6",
