--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "webpack --config webpack/webpack.prod.js",
     "bundle": "npm run build",
-    "startDev": "webpack --config webpack/webpack.dev.js --watch & NODE_ENV=development node src/server/server.ts & node_modules/open-cli/cli.js http://localhost:3000",
+    "startDev": "./run_local.sh",
     "startProd": "NODE_ENV=production node src/server/server.ts",
     "lint": "eslint . --ext .ts"
   },
