--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@types/socket.io": "^2.1.10",
     "express": "^4.17.1",
     "phaser": "^3.24.1",
+    "phaser3-rex-plugins": "^1.1.23",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0"
   },
