--- a/package.json
+++ b/package.json
@@ -53,7 +53,6 @@
     "open-cli": "^6.0.1",
     "prettier": "2.0.5",
     "ts-loader": "^5.4.5",
-    "typescript": "^3.9.6",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
@@ -68,7 +67,8 @@
     "phaser3-rex-plugins": "^1.1.23",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
-    "ts-node": "^8.10.2"
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.7"
   },
   "husky": {
     "hooks": {
