--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.1.1",
+    "copy-webpack-plugin": "^6.0.3",
     "eslint": "^7.6.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.22.0",
@@ -61,13 +61,19 @@
     "workbox-webpack-plugin": "^5.1.3"
   },
   "dependencies": {
+    "@types/express-session": "^1.17.0",
+    "@types/express-socket.io-session": "^1.3.2",
     "@types/socket.io": "^2.1.10",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "express-session-sqlite": "^2.0.6",
+    "express-socket.io-session": "^1.3.5",
     "lodash": "^4.17.20",
     "phaser": "^3.24.1",
     "phaser3-rex-plugins": "^1.1.23",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
+    "sqlite3": "^5.0.0",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.7"
   },
