--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
   "dependencies": {
     "@types/express-session": "^1.17.0",
     "@types/express-socket.io-session": "^1.3.2",
+    "@types/lodash": "^4.14.161",
     "@types/socket.io": "^2.1.10",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
