--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "express-session-sqlite": "^2.0.6",
     "express-socket.io-session": "^1.3.5",
     "lodash": "^4.17.20",
+    "organize-imports-cli": "^0.7.0",
     "phaser": "^3.24.1",
     "phaser3-rex-plugins": "^1.1.25",
     "socket.io": "^2.3.0",
@@ -85,6 +86,7 @@
   },
   "lint-staged": {
     "**/*.{js,ts}": [
+      "organize-imports-cli",
       "eslint --fix",
       "prettier --write"
     ],
