--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "sqlite3": "^5.0.0",
+    "trie-prefix-tree": "^1.5.1",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.7"
   },
