--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "bundle": "npm run build",
     "startDev": "./run_local.sh",
     "startProd": "NODE_ENV=production ./node_modules/.bin/ts-node src/server/server.ts",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts",
+    "test": "jest",
+    "testw": "jest --watch"
   },
   "keywords": [
     "Phaser",
@@ -47,11 +49,13 @@
     "eslint-plugin-import": "^2.22.0",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^4.2.5",
+    "jest": "^26.4.2",
     "lint-staged": "^10.2.11",
     "nodemon": "^2.0.4",
     "npm-run-all": "^4.1.5",
     "open-cli": "^6.0.1",
     "prettier": "2.0.5",
+    "ts-jest": "^26.4.0",
     "ts-loader": "^5.4.5",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
@@ -63,6 +67,7 @@
   "dependencies": {
     "@types/express-session": "^1.17.0",
     "@types/express-socket.io-session": "^1.3.2",
+    "@types/jest": "^26.0.14",
     "@types/lodash": "^4.14.161",
     "@types/socket.io": "^2.1.10",
     "express": "^4.17.1",
