--- a/src/client2/package.json
+++ b/src/client2/package.json
@@ -2,6 +2,7 @@
   "name": "letterjam-client",
   "version": "0.1.0",
   "private": true,
+  "proxy":"http://localhost:3000",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -10,9 +11,11 @@
     "@types/node": "^12.12.67",
     "@types/react": "^16.9.52",
     "@types/react-dom": "^16.9.8",
+    "@types/socket.io-client": "^1.4.34",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-scripts": "3.4.3",
+    "socket.io-client": "^2.3.1",
     "typescript": "^3.7.5"
   },
   "scripts": {
