tsconfig - ignore client2

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,10 @@
     "sourceMap": true,
     "strictPropertyInitialization": false,
     "lib": ["dom", "es6", "esnext"]
-  }
+  },
+  "include": [
+    "src/client/",
+    "src/server/",
+    "src/shared/"
+  ]
 }
