--- a/src/client2/package.json
+++ b/src/client2/package.json
@@ -16,6 +16,7 @@
     "@types/socket.io-client": "^1.4.34",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-draggable": "^4.4.3",
     "react-scripts": "3.4.3",
     "socket.io-client": "^2.3.1",
     "typescript": "^3.7.5"
