react-client + express: it's working

--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "phaser-project-template",
-  "version": "3.24.1",
-  "description": "Phaser 3 starter template with TypeScript and webpack.",
-  "homepage": "https://github.com/yandeu/phaser-project-template#readme",
+  "name": "letterjam",
+  "version": "0.0.0",
+  "description": "Digital conversion of Letterjam board game",
   "main": "index.js",
   "scripts": {
     "build": "webpack --config webpack/webpack.prod.js",
@@ -13,28 +12,6 @@
     "test": "jest --testPathIgnorePatterns src/client2",
     "testw": "jest --watch --testPathIgnorePatterns src/client2"
   },
-  "keywords": [
-    "Phaser",
-    "Phaser 3",
-    "Phaser3",
-    "html5 game",
-    "TypeScript",
-    "webpack",
-    "starter"
-  ],
-  "author": {
-    "name": "Yannick Deubel",
-    "url": "https://github.com/yandeu"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/yandeu/phaser-project-template.git"
-  },
-  "template": {
-    "name": "phaser-project-template",
-    "url": "https://github.com/yandeu/phaser-project-template",
-    "author": "Yannick Deubel (https://github.com/yandeu)"
-  },
   "engines": {
     "node": ">=8.0.0"
   },
@@ -42,48 +19,103 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
+    "babel-eslint": "10.1.0",
+    "babel-jest": "^24.9.0",
+    "babel-loader": "8.1.0",
+    "babel-plugin-named-asset-import": "^0.3.6",
+    "babel-preset-react-app": "^9.1.2",
+    "case-sensitive-paths-webpack-plugin": "2.3.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.0.3",
     "eslint": "^7.6.0",
     "eslint-config-prettier": "^6.11.0",
+    "eslint-config-react-app": "^5.2.1",
+    "eslint-loader": "3.0.3",
+    "eslint-plugin-flowtype": "4.6.0",
     "eslint-plugin-import": "^2.22.0",
-    "html-webpack-plugin": "^3.2.0",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-react": "7.19.0",
+    "eslint-plugin-react-hooks": "^1.6.1",
+    "html-webpack-plugin": "4.0.0-beta.11",
     "husky": "^4.2.5",
     "jest": "^26.4.2",
+    "jest-environment-jsdom-fourteen": "1.0.1",
+    "jest-resolve": "24.9.0",
+    "jest-watch-typeahead": "0.4.2",
     "lint-staged": "^10.2.11",
     "nodemon": "^2.0.4",
     "npm-run-all": "^4.1.5",
     "open-cli": "^6.0.1",
+    "optimize-css-assets-webpack-plugin": "5.0.3",
+    "pnp-webpack-plugin": "1.6.4",
     "prettier": "2.0.5",
+    "terser-webpack-plugin": "2.3.8",
     "ts-jest": "^26.4.0",
     "ts-loader": "^5.4.5",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
+    "webpack-manifest-plugin": "2.2.0",
     "webpack-merge": "^4.2.2",
     "webpack-obfuscator": "^0.27.4",
     "workbox-webpack-plugin": "^5.1.3"
   },
   "dependencies": {
+    "@babel/core": "7.9.0",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@svgr/webpack": "4.3.3",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
     "@types/express-session": "^1.17.0",
     "@types/express-socket.io-session": "^1.3.2",
-    "@types/jest": "^26.0.14",
+    "@types/jest": "^26.0.15",
     "@types/lodash": "^4.14.161",
+    "@types/node": "^12.12.67",
+    "@types/react": "^16.9.52",
+    "@types/react-dom": "^16.9.8",
     "@types/socket.io": "^2.1.10",
+    "@types/socket.io-client": "^1.4.34",
+    "camelcase": "^5.3.1",
+    "css-loader": "3.4.2",
+    "dotenv": "8.2.0",
+    "dotenv-expand": "5.1.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "express-session-sqlite": "^2.0.6",
     "express-socket.io-session": "^1.3.5",
+    "file-loader": "4.3.0",
+    "fs-extra": "^8.1.0",
+    "identity-obj-proxy": "3.0.0",
     "lodash": "^4.17.20",
+    "mini-css-extract-plugin": "0.9.0",
     "organize-imports-cli": "^0.7.0",
     "phaser": "^3.24.1",
     "phaser3-rex-plugins": "^1.1.25",
+    "postcss-flexbugs-fixes": "4.1.0",
+    "postcss-loader": "3.0.0",
+    "postcss-normalize": "8.0.1",
+    "postcss-preset-env": "6.7.0",
+    "postcss-safe-parser": "4.0.1",
+    "react": "^16.14.0",
+    "react-app-polyfill": "^1.0.6",
+    "react-dev-utils": "^10.2.1",
+    "react-dom": "^16.14.0",
+    "react-draggable": "^4.4.3",
+    "resolve": "1.15.0",
+    "resolve-url-loader": "3.1.2",
+    "sass-loader": "8.0.2",
+    "semver": "6.3.0",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "sqlite3": "^5.0.0",
+    "style-loader": "0.23.1",
     "trie-prefix-tree": "^1.5.1",
     "ts-node": "^8.10.2",
-    "typescript": "^3.9.7"
+    "ts-pnp": "1.1.6",
+    "typescript": "^3.9.7",
+    "url-loader": "2.3.0"
   },
   "husky": {
     "hooks": {
