--- a/package.json
+++ b/package.json
@@ -32,32 +32,20 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-react-app": "^5.2.1",
     "eslint-loader": "3.0.3",
-    "eslint-plugin-flowtype": "4.6.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.19.0",
-    "eslint-plugin-react-hooks": "^1.6.1",
     "html-webpack-plugin": "4.0.0-beta.11",
     "husky": "^4.2.5",
     "jest": "^26.4.2",
-    "jest-environment-jsdom-fourteen": "1.0.1",
-    "jest-resolve": "24.9.0",
-    "jest-watch-typeahead": "0.4.2",
     "lint-staged": "^10.2.11",
     "nodemon": "^2.0.4",
-    "npm-run-all": "^4.1.5",
     "open-cli": "^6.0.1",
-    "optimize-css-assets-webpack-plugin": "5.0.3",
     "organize-imports-cli": "^0.7.0",
-    "pnp-webpack-plugin": "1.6.4",
     "prettier": "2.0.5",
-    "terser-webpack-plugin": "2.3.8",
     "ts-jest": "^26.4.0",
     "ts-loader": "^5.4.5",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
-    "webpack-manifest-plugin": "2.2.0",
     "webpack-merge": "^4.2.2",
     "webpack-obfuscator": "^0.27.4",
     "workbox-webpack-plugin": "^5.1.3"
@@ -107,6 +95,6 @@
       "eslint --fix",
       "prettier --write"
     ],
-    "*.{js,css,md}": "prettier --write"
+    "*.{css,md}": "prettier --write"
   }
 }
